[package]
authors = [ "dixaba" ]
edition = "2018"
name    = "sudoku"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

daemonize         = "0.4.1"
log               = "0.4.8"
pretty_env_logger = "0.4.0"
tokio             = { version = "0.2.21", features = [ "macros" ] }
warp              = "^0.2.3"
