[package]
authors = ["dixaba"]
edition = "2018"
name    = "sudoku"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
log               = "0.4.14"
pretty_env_logger = "0.4.0"
rusqlite          = "0.24.2"
tokio             = { version = "1.1.0", features = ["macros", "rt-multi-thread"] }
warp              = "0.3.0"
